[Feature] Create Home Screen View

--- a/DuplicatedApps/DuplicatedApps/Info.plist
+++ b/DuplicatedApps/DuplicatedApps/Info.plist
@@ -21,6 +21,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Inter-Medium.ttf</string>
+		<string>Inter-Thin.ttf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
