--- a/DuplicatedApps/DuplicatedApps/Info.plist
+++ b/DuplicatedApps/DuplicatedApps/Info.plist
@@ -25,6 +25,7 @@
 	<array>
 		<string>Inter-Medium.ttf</string>
 		<string>Inter-Thin.ttf</string>
+		<string>Fontspring-DEMO-biennale-medium.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
