[Feature] Create Login Screen

--- a/DuplicatedApps/DuplicatedApps/Info.plist
+++ b/DuplicatedApps/DuplicatedApps/Info.plist
@@ -26,6 +26,7 @@
 		<string>Inter-Medium.ttf</string>
 		<string>Inter-Thin.ttf</string>
 		<string>Fontspring-DEMO-biennale-medium.otf</string>
+		<string>TTHoves-DemiBold.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
