--- a/DuplicatedApps/DuplicatedApps/GoogleService-Info.plist
+++ b/DuplicatedApps/DuplicatedApps/GoogleService-Info.plist
@@ -3,28 +3,30 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyABkoJoeo4ydZyEs1mXcx2ZoP_K_16nV_g</string>
+	<string>AIzaSyCyJ2RdU9ziIXza8vBtc7S3bIJ5N410Otk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>730681817817</string>
+	<string>503254985448</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.dofuulive.iosapp.duplicated</string>
 	<key>PROJECT_ID</key>
-	<string>duplicated-apps</string>
+	<string>duplicatedapps</string>
 	<key>STORAGE_BUCKET</key>
-	<string>duplicated-apps.appspot.com</string>
+	<string>duplicatedapps.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:730681817817:ios:c572dddd0718af22539cc8</string>
+	<string>1:503254985448:ios:417689f13bc1ffbd89b75d</string>
+	<key>DATABASE_URL</key>
+	<string>https://duplicatedapps-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
