[Feat] Create Tabbar

--- a/DuplicatedApps/DuplicatedApps/Info.plist
+++ b/DuplicatedApps/DuplicatedApps/Info.plist
@@ -8,6 +8,7 @@
 		<string>Inter-Thin.ttf</string>
 		<string>Fontspring-DEMO-biennale-medium.otf</string>
 		<string>TTHoves-DemiBold.ttf</string>
+		<string>MADE Tommy Soft Medium PERSONAL USE.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
