[Feat] Staging home screen

--- a/DuplicatedApps/DuplicatedApps/Info.plist
+++ b/DuplicatedApps/DuplicatedApps/Info.plist
@@ -9,6 +9,8 @@
 		<string>Fontspring-DEMO-biennale-medium.otf</string>
 		<string>TTHoves-DemiBold.ttf</string>
 		<string>MADE Tommy Soft Medium PERSONAL USE.otf</string>
+		<string>Inter-BoldItalic.otf</string>
+		<string>Inter-LightItalic.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
