[Feat] Done HomeScreen UI

--- a/DuplicatedApps/DuplicatedApps/Info.plist
+++ b/DuplicatedApps/DuplicatedApps/Info.plist
@@ -11,6 +11,8 @@
 		<string>MADE Tommy Soft Medium PERSONAL USE.otf</string>
 		<string>Inter-BoldItalic.otf</string>
 		<string>Inter-LightItalic.otf</string>
+		<string>Inter-Italic.otf</string>
+		<string>Inter-MediumItalic.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
